<resources>
    <string name="app_name">CalculadoraByBrayan</string>
    <string name="uno">1</string>
    <string name="dos">2</string>
    <string name="tres">3</string>
    <string name="cuatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="siete">7</string>
    <string name="ocho">8</string>
    <string name="nueve">9</string>
    <string name="cero">0</string>
    <string name="resultado">|</string>
    <string name="igual">=</string>
    <string name="sumar">+</string>
    <string name="restar">-</string>
    <string name="multiplicar">*</string>
    <string name="dividir">/</string>
    <string name="potencia">x10^x</string>
    <string name="punto">.</string>
    <string name="limpiartodo">AC</string>
    <string name="limpiarparte">DEL</string>
    <string name="valoranterior">Ans</string>
</resources>
